[gd_scene load_steps=4 format=3 uid="uid://djufpnrfn8quu"]

[ext_resource type="Script" path="res://Scripts/LevelCompleteMessage.gd" id="1_g5vmr"]
[ext_resource type="StyleBox" uid="uid://gnohb6dn4y6s" path="res://Art/ThemesAndStyles/level_complete_panel_stylebox.tres" id="2_m3gjl"]
[ext_resource type="Script" path="res://Scripts/SwapSceneButton.gd" id="3_m13yg"]

[node name="LevelCompleteMessage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g5vmr")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(448, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = ExtResource("2_m3gjl")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Level Complete!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="LastLevelLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.75, 0, 1)
theme_override_font_sizes/font_size = 20
text = "This is the last level in this pack"
horizontal_alignment = 1

[node name="HBoxContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="NextLevelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Next Level!"

[node name="ExitToLevelSelectButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("old_scene")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Level Select"
script = ExtResource("3_m13yg")
new_scene_path = "res://Scenes/main_menu_scene.tscn"
old_scene = NodePath("../../../../..")
